# parser

./: .gitignore  README.md  cases.json  parse_cases.py  pyproject.toml  requirements.txt
data/: cases.html
tests/: test_parse_cases.py
