[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vk-ads-case-parser"
version = "0.1.0"
description = "CLI tool that extracts VK Ads case studies and emits normalized JSON."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Max Chad" }
]
keywords = ["vk", "ads", "parser", "scraper", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing :: Markup :: HTML"
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9",
]

[project.scripts]
vk-ads-case-parser = "parse_cases:main"

[tool.setuptools]
py-modules = ["parse_cases"]
